<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d5eeff"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d5eeff"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/title_form_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title_form"
            android:textAlignment="center"
            android:textColor="#4a4de7"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:helperText="@string/required_field"
            app:helperTextTextColor="#3186b2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a0e4f1"
                android:hint="@string/name"
                android:textColor="#2F2342"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:helperText="@string/required_field"
            app:helperTextTextColor="#3186b2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7ea6f4"
                android:hint="@string/email"
                android:textColor="#2F2342"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:helperText="@string/required_field"
            app:helperTextTextColor="#3186b2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#a0e4f1"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#2F2342"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rep_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:helperText="@string/required_field"
            app:helperTextTextColor="#3186b2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rep_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7ea6f4"
                android:hint="@string/rep_password"
                android:inputType="textPassword"
                android:textColor="#2F2342"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/genre_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/genre"
            android:textColor="#4a4de7" />

        <RadioGroup
            android:id="@+id/genre_radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/female_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:checked="true"
                android:text="@string/female"
                android:textColor="#4a4de7"
                android:textColorLink="#0e1555" />

            <RadioButton
                android:id="@+id/male_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/male"
                android:textColor="#4a4de7"
                android:textColorLink="#0e1555" />

            <RadioButton
                android:id="@+id/other_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/other"
                android:textColor="#4a4de7"
                android:textColorLink="#0e1555" />
        </RadioGroup>

        <TextView
            android:id="@+id/hobbies_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hobbies"
            android:textColor="#4a4de7" />

        <LinearLayout
            android:id="@+id/hobbie_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/sport_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/sport"
                android:textColor="#4a4de7" />

            <CheckBox
                android:id="@+id/read_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/read"
                android:textColor="#4a4de7" />

            <CheckBox
                android:id="@+id/eat_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/eat"
                android:textColor="#4a4de7" />

            <CheckBox
                android:id="@+id/dance_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="#4a4de7"
                android:text="@string/dance"
                android:textColor="#4a4de7" />
        </LinearLayout>

        <Button
            android:id="@+id/date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4a4de7"
            android:text="@string/pick_date" />

        <LinearLayout
            android:id="@+id/city_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/city" />

            <Spinner
                android:id="@+id/birth_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/city_list" />

        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="#4a4de7"
            android:gravity="center"
            android:text="@string/save" />

        <TextView
            android:id="@+id/info_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/info_text"
            android:textColor="#4a4de7" />

        <TextView
            android:id="@+id/print_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_radius"
            android:text="@string/print_info"
            android:textColor="#252243" />

    </LinearLayout>
</ScrollView>